--- a/src/main/resources/css/Theme.css
+++ b/src/main/resources/css/Theme.css
@@ -43,3 +43,14 @@
 .text-field:focused {
 	-fx-border-color: #00d100
 }
+
+.email-box {
+	-fx-background-color: transparent;
+	-fx-border-width: 1;
+	-fx-border-color: #5a5a5a;
+}
+
+.scroll-pane, .vbox{
+	-fx-background-color: transparent;
+	-fx-base: transparent
+}
